--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.8)
 project(PhantasmHardwareInterface)
 
+include(cmake/UnityBuild.cmake)
+
 # =========================================
 # global options
 
@@ -15,6 +17,8 @@ option(PHI_ENABLE_DEBUG_MARKERS "enable API debug markers" ON)
 # this dll is included in extern/win32_pix_runtime/bin/
 option(PHI_ENABLE_D3D12_PIX "enable DirectX 12 PIX integration" OFF)
 option(PHI_ENABLE_SDL2 "Search for and enable SDL2 integration" ON)
+
+option(PHI_ENABLE_UNITY_BUILD "If enabled, compiles this library as a single compilation unit" ON)
 
 # =========================================
 # post-process options
@@ -33,7 +37,8 @@ endif()
 # =========================================
 # define library
 
-file(GLOB_RECURSE SOURCES "src/*.cc" "src/*.hh" "src/*.c" "src/*.h")
+file(GLOB_RECURSE SOURCES "src/*.cc" "src/*.c")
+file(GLOB_RECURSE HEADERS "src/*.hh" "src/*.h")
 
 # disable backends
 if (NOT PHI_BACKEND_D3D12)
@@ -52,9 +57,13 @@ if (NOT PHI_BACKEND_VULKAN)
     endforeach()
 endif()
 
-source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}/src" FILES ${SOURCES})
+source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}/src" FILES ${SOURCES} ${HEADERS})
 
-add_library(phantasm-hardware-interface STATIC ${SOURCES})
+if (PHI_ENABLE_UNITY_BUILD)
+    enable_unity_build(phantasm-hardware-interface SOURCES 100 cc)
+endif()
+
+add_library(phantasm-hardware-interface STATIC ${SOURCES} ${HEADERS})
 
 target_include_directories(phantasm-hardware-interface
     PUBLIC
