Only include FindVulkan.cmake if backend is enabled, fix 1.2 SDK incompatibility

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,6 @@
 cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
 project(PhantasmHardwareInterface)
 
-# use provided .cmake modules in ./cmake/ (includes the latest FindVulkan.cmake which is broken out of the box on older CMake versions
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 if (NOT TARGET clean-core)
     message(FATAL_ERROR "[phantasm hardware interface] clean-core must be available")
@@ -26,10 +24,15 @@ option(PHI_ENABLE_SDL2 "enable SDL2 integration" ON)
 # =========================================
 # post-process options
 
-find_package(Vulkan)
+if (PHI_BACKEND_VULKAN)
+    # use provided .cmake modules in ./cmake/ with the latest FindVulkan.cmake, which is broken out of the box on older CMake versions
+    set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
-if (NOT Vulkan_FOUND)
-    set(PHI_BACKEND_VULKAN OFF)
+    find_package(Vulkan)
+
+    if (NOT Vulkan_FOUND)
+        set(PHI_BACKEND_VULKAN OFF)
+    endif()
 endif()
 
 if (NOT MSVC)
